# tree-sitter-razor

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-razor.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_razor/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
queries/: injections.scm
src/: grammar.json  node-types.json  scanner.c
test/corpus/: blazor.txt  html.txt  razor_code_blocks.txt  razor_comments.txt  razor_control_flow.txt  razor_directives.txt  razor_expressions.txt
